Fix body content spacing

--- a/css/style.css
+++ b/css/style.css
@@ -43,16 +43,16 @@ h1 {
 }
 h2 {
   font-size: 2.3rem;
-  margin: 25px 0px 5px 0px;
+  margin: 0px 0px -5px 0px;
 }
 h3 {
   font-size: 1.5rem;
-  margin: 15px 0px 0px 0px;
+  margin: 30px 0px -5px 0px;
 }
 
 p {
   font-size: 1.2rem;
-  margin: 10px 0px 0px 0px;
+  margin: 20px 0px 0px 0px;
 }
 
 /* ==================================== SKIP TO MAIN STYLING ==================================== */
@@ -140,7 +140,7 @@ main figure {
   grid-column: 1 / -1;
 }
 main section {
-  padding: 0px 0px 15px 0px;
+  padding: 25px 0px 25px 0px;
 }
 main section:nth-child(2n) {
   background-color: var(--tan);
@@ -151,12 +151,12 @@ main section:last-child::after {
   grid-column: 1 / -1;
   justify-content: center;
   color: var(--ash);
-  margin: 20px 0px 10px 0px;
+  margin: 25px 0px 10px 0px;
   letter-spacing: -2px;
 }
 main figure img {
   width: 100%;
-  margin: 10px 0px 0px 0px;
+  margin: 20px 0px 0px 0px;
 }
 main figcaption {
   position: relative;
@@ -173,7 +173,7 @@ main ul {
 }
 main ul,
 main ol {
-  margin: 2px 0px 0px 0px;
+  margin: 5px 0px 0px 0px;
 }
 main ul li,
 main ol li {
@@ -188,6 +188,11 @@ main address {
 }
 main a {
   color: var(--light-blue);
+}
+main p,
+main ul li,
+main ol li {
+  line-height: 1.9rem;
 }
 
 /* ======================================= FOOTER STYLING ======================================= */
